# TYSH-News-WorkFlow

./: .gitignore  README.md  config.ini  keepalive.py  mail-template.html  main.py  pyproject.toml  save_post_id.json  temple_config.ini  test.py
core/: config.py  request.py
example/: 【合作社公告】校服發放後續作業說明.html
example/【合作社公告】校服發放後續作業說明_files/: jquery.js.下載  layout.css  show.js.下載  style.css
logo/: logo.txt  maker.txt  makergroup.txt
mail-templates/: mail-template.html
templates/: home.html
